PR 03 — Skill and Finalized-Trace Catalogs